# nymble-assignment

./: .gitignore  pyproject.toml  readme.md
config/: settings.py  urls.py  usernames.txt
config/settings/: __init__.py  base.py  dev.py
main_app/: admin.py  exceptions.py  filters.py  models.py  permission.py  serializers.py  tests.py  urls.py  util.py  views.py  views_service.py
main_app/management/: helpers.py
main_app/management/commands/: main_app_data.py
